<resources>
    <string name="app_name">Mari Reader</string>
    <string name="title_library">Library</string>
    <string name="title_sources">Sources</string>
    <string name="title_settings">Settings</string>
    <string name="toggle_favorite">Toggle favorite</string>
    <string name="download_chapter">Download chapter</string>
    <string name="downloaded_image_desc">Downloaded page image</string>
    <string name="active_download_id">Download</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Retry</string>
    <string name="cd_add_manga">Add manga</string>
    <string name="cd_prev_chapter">Previous chapter</string>
    <string name="cd_next_chapter">Next chapter</string>
    <string name="cd_refresh_page">Refresh page</string>
    <string name="cd_add_to_favorites">Add to favorites</string>
    <string name="cd_sync_now">Sync now</string>
    <string name="cd_sync_chapters">Sync / Save chapters</string>

    <string-array name="theme_entries">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>

    <string-array name="theme_values">
        <item>light</item>
        <item>dark</item>
        <item>system</item>
    </string-array>

    <string-array name="update_interval_entries">
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
    </string-array>

    <string-array name="update_interval_values">
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
        <item>21600000</item>
        <item>43200000</item>
        <item>86400000</item>
    </string-array>

</resources>