<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.browser.BrowserFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_manga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/cd_add_manga" />

    <!-- Previous / Next chapter buttons (above main FABs) -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_prev_chapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="88dp"
        app:srcCompat="@android:drawable/ic_media_previous"
        android:contentDescription="@string/cd_prev_chapter" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_next_chapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="88dp"
        app:srcCompat="@android:drawable/ic_media_next"
        android:contentDescription="@string/cd_next_chapter" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_margin="16dp"
        app:srcCompat="@android:drawable/ic_popup_sync"
        android:contentDescription="@string/cd_refresh_page" />

    <!-- Sync now FAB: manually trigger scraping for the current WebView page -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_sync_manga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="88dp"
        app:srcCompat="@android:drawable/ic_menu_save"
        android:contentDescription="@string/cd_sync_chapters" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favorite_manga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        app:srcCompat="@android:drawable/btn_star_big_off"
        android:contentDescription="@string/cd_add_to_favorites" />

</FrameLayout>
