<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:gravity="center_vertical">

    <TextView
        android:id="@+id/active_title"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/active_download_id" />

    <ProgressBar
        android:id="@+id/active_progress"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        style="@android:style/Widget.ProgressBar.Horizontal" />

    <TextView
        android:id="@+id/active_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:paddingStart="8dp"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/active_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:paddingStart="8dp"
        android:textColor="@android:color/holo_blue_light" />

</LinearLayout>
