<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.tinyreader.mari_reader.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_sources"
        android:name="com.tinyreader.mari_reader.ui.sources.SourcesFragment"
        android:label="@string/title_sources"
        tools:layout="@layout/fragment_sources" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.tinyreader.mari_reader.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_browser"
        android:name="com.tinyreader.mari_reader.ui.browser.BrowserFragment"
        android:label="Browser"
        tools:layout="@layout/fragment_browser">
        <argument
            android:name="sourceUrl"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_chapter_list"
        android:name="com.tinyreader.mari_reader.ui.chapter.ChapterListFragment"
        android:label="Chapters"
        tools:layout="@layout/fragment_chapter_list">
        <argument
            android:name="mangaUrl"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_reader"
        android:name="com.tinyreader.mari_reader.ui.reader.ReaderFragment"
        android:label="Reader"
        tools:layout="@layout/fragment_reader">
        <argument
            android:name="chapterUrl"
            app:argType="string" />
        <argument
            android:name="mangaUrl"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_downloads"
        android:name="com.tinyreader.mari_reader.ui.downloads.DownloadsFragment"
        android:label="Downloads"
        tools:layout="@layout/fragment_downloads" />

    <fragment
        android:id="@+id/navigation_downloaded_viewer"
        android:name="com.tinyreader.mari_reader.ui.downloads.DownloadedViewerFragment"
        android:label="Downloaded Viewer"
        tools:layout="@layout/fragment_downloaded_viewer">
        <argument android:name="dirPath" app:argType="string" />
    </fragment>

</navigation>
